Trying to solve load problem

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Game</title>
         <link rel="stylesheet" href="style.css" type="text/css">
+
+        <!--Project only-->
+        <base href="/Iron-shooter/">
         
         <!--For fav icon problem-->
         <link rel="shortcut icon" href="#">
